Changes to mobile version to accomodate for IOS webkit issues (Scrolling gallery converted to fixed one on mobile)

--- a/Pages/SRC/srcstyles.css
+++ b/Pages/SRC/srcstyles.css
@@ -31,12 +31,8 @@ html {
   opacity: 1;
   padding: 0%;
   margin: 0%;
-  background-image: linear-gradient(
-      180deg,
-      rgba(16, 11, 34, 0.678) 30%,
-      rgba(94, 67, 203, 0.603) 90%
-    ),
-    url("img/SRC-20222023-BG.jpg");
+  background-image:
+    url("/img/SRC-20222023-BG-mobile.jpg");
   background-size: 120vw;
   background-repeat: none;
   position: relative;
@@ -287,11 +283,11 @@ p.title2 {
     font-size: 40%;
   }
   .media-scroller {
-    --_spacer: 10px;
+    --_spacer: 12.5px;
     display: grid;
     gap: var(--_spacer);
-    grid-auto-flow: column;
-    grid-auto-columns: 60%;
+    grid-auto-flow: row;
+    grid-auto-columns: 100%;
 
     padding: 0 var(--_spacer) var(--_spacer);
 
@@ -300,19 +296,19 @@ p.title2 {
   }
 
   .media-scroller--with-groups {
-    grid-auto-columns: 80%;
+    grid-auto-columns: 100%;
   }
 
   p.title {
     font-family: "Satoshi";
-    font-size: 4rem;
+    font-size: 4.5rem;
     font-weight: 600;
     padding-left: 10px;
   }
 
   p.title2 {
     font-family: "Aileron";
-    font-size: 2.4721rem;
+    font-size: 3rem;
     font-weight: 300;
     padding-left: 10px;
     padding-bottom: 10px;
@@ -349,7 +345,7 @@ p.title2 {
 
   .media-element {
     display: grid;
-    gap: 5px;
+    gap: 10px;
     background: rgb(4, 2, 14);
     background: linear-gradient(
       180deg,
@@ -358,7 +354,10 @@ p.title2 {
     );
     border-radius: 3px;
     box-shadow: var(--shadow-2);
-    height: 375px;
+    height: 550px;
+    margin-left: 3.5vw;
+    margin-right: 3.5vw;
+    width: 87.5vw;
     transition: 0.4s ease-in-out;
     cursor: pointer;
   }
@@ -374,14 +373,14 @@ p.title2 {
     );
     border-radius: 3px;
     box-shadow: var(--shadow-2);
-    height: 375px;
+    height: 550px;
     transition: 0.4s ease-in-out;
     cursor: pointer;
   }
 
   .media-element > img {
     inline-size: 100%;
-    height: 250px;
+    height: 400px;
     object-fit: cover;
     object-position: center;
     float: bottom;
@@ -391,7 +390,7 @@ p.title2 {
 
   .media-element:hover img {
     inline-size: 100%;
-    height: 250px;
+    height: 400px;
     object-fit: cover;
     object-position: center;
     float: bottom;
@@ -473,7 +472,7 @@ p.title2 {
     background-position: 50% 50%;
     background-repeat: no-repeat;
     width: 100%;
-    height: 70%;
+    height: 100vh;
     padding: 0;
     margin: 0;
     position: relative;
